--- a/src/App.css
+++ b/src/App.css
@@ -225,10 +225,10 @@ input[type="range"] {
 
 input[type="range"]::-webkit-slider-thumb {
     -webkit-appearance: none;
-    width: 20px;
-    height: 20px;
+    width: 2px;
+    height: 35px;
     border-radius: 4px;
-    background: rgb(169, 169, 169);
+    background: rgb(255, 40, 40);
     cursor: pointer;
 
 }
@@ -261,7 +261,8 @@ input[type="range"]::-webkit-slider-thumb:hover {
     flex-direction: row;
     font-weight: bold;
 }
-.playlistname p{
+
+.playlistname p {
     color: black;
 }
 
@@ -312,10 +313,12 @@ input[type="range"]::-webkit-slider-thumb:hover {
 }
 
 .seeker {
-    width: 70%;
+    width: 280px ;
     z-index: 1;
     -webkit-box-reflect: below 0px linear-gradient(to bottom, rgba(0, 0, 0, 0.0) 30%, rgba(0, 0, 0, 0.6) 100%);
-
+    position: absolute;
+    left: 45px;
+    opacity: 0%;
 }
 
 .seekerdiv {
@@ -326,6 +329,7 @@ input[type="range"]::-webkit-slider-thumb:hover {
     padding-left: 10px;
     padding-right: 10px;
     font-weight: bold;
+    position: relative;
 
 
 }
@@ -336,9 +340,8 @@ input[type="range"]::-webkit-slider-thumb:hover {
     border-top: 0.5px solid gray;;
     border-bottom: 0.5px solid gray;
     background: #e6e6e6;
-    background: linear-gradient(0deg,rgba(230, 230, 230, 1) 11%, rgba(247, 247, 247, 1) 55%, rgba(255, 255, 255, 1) 55%);
+    background: linear-gradient(0deg, rgba(230, 230, 230, 1) 11%, rgba(247, 247, 247, 1) 55%, rgba(255, 255, 255, 1) 55%);
     -webkit-box-reflect: below 0px linear-gradient(to bottom, rgba(0, 0, 0, 0.0) 30%, rgba(0, 0, 0, 0.4) 100%);
-
 
 
 }
@@ -347,7 +350,7 @@ input[type="range"]::-webkit-slider-thumb:hover {
     width: 100%;
     height: 100%;
     background: #52BFE3;
-    background: linear-gradient(0deg,rgba(82, 191, 227, 1) 11%, rgba(84, 158, 244, 1) 55%, rgba(110, 177, 255, 1) 55%);
+    background: linear-gradient(0deg, rgba(82, 191, 227, 1) 11%, rgba(84, 158, 244, 1) 55%, rgba(110, 177, 255, 1) 55%);
 
 }
 
