--- a/src/App.css
+++ b/src/App.css
@@ -140,6 +140,8 @@ p {
     grid-template-rows: repeat(3, 30px);
     cursor: grab;
     user-select: none;
+    touch-action: none;
+
 
 }
 
@@ -503,7 +505,7 @@ h2 {
 
     .Screen {
         width: 90%;
-        /*height: 40%;*/
+        height: 280px;
         margin: 31px 31px 50px;
         /*border: 3px solid black;*/
         border-radius: 10px;
