--- a/src/App.css
+++ b/src/App.css
@@ -446,7 +446,7 @@ h2 {
     text-align: left;
     font-size: 17px;
     text-overflow: ellipsis;
-    height: 25px;
+    height: 25px;sbar
     padding-left: 6px;
     margin: 0;
 
@@ -500,7 +500,7 @@ h2 {
         border-radius: 0;
         display: flex;
         flex-direction: column;
-        justify-content: end;
+        justify-content: center;
         /*gap: 50px;*/
         /*box-shadow: none; */
     }
@@ -508,9 +508,10 @@ h2 {
     .Screen {
         width: 90%;
         height: 280px;
-        margin: 31px 31px 50px;
-        /*border: 3px solid black;*/
+        /*margin: 31px 31px 50px;*/
+        border: 3px solid black;
         border-radius: 10px;
+        overflow: hidden;
     }
 
     .Scrollwheel {
@@ -522,7 +523,7 @@ h2 {
     .screen-playlist,
     .screen-list,
     .screen-nowplaying {
-        height: 100%;
+        height: 261.5px;
     }
 
     .seeker {
@@ -561,42 +562,53 @@ h2 {
 
     }
 
+    .playlist {
+        /*height: 100%;*/
+    }
+
     .statusbar {
         /*height: 15px;*/
         font-size: 12px;
     }
-}
 
-:root {
-    --color-blue: oklch(45% 50% 264deg);
-    --color-red: oklch(50% 55% 31deg);
-
-    --color-gray-50: oklch(98.42% 0.0034 247.86deg);
-    --color-gray-100: oklch(12% 9.5% 264deg / 5%);
-    --color-gray-200: oklch(12% 9% 264deg / 8%);
-    --color-gray-300: oklch(12% 8.5% 264deg / 17%);
-    --color-gray-400: oklch(12% 8% 264deg / 38%);
-    --color-gray-500: oklch(12% 7.5% 264deg / 50%);
-    --color-gray-600: oklch(12% 7% 264deg / 67%);
-    --color-gray-700: oklch(0.458 0.296 264.719 / 0.77);
-    --color-gray-800: oklch(12% 5% 264deg / 85%);
-    --color-gray-900: oklch(12% 5% 264deg / 90%);
-    --color-gray-950: oklch(12% 5% 264deg / 95%);
-
-    @media (prefers-color-scheme: dark) {
-        --color-blue: oklch(69% 50% 264deg);
-        --color-red: oklch(80% 55% 31deg);
-
-        --color-gray-50: oklch(17% 1% 264deg);
-        --color-gray-100: oklch(28% 3% 264deg / 65%);
-        --color-gray-200: oklch(31% 3% 264deg / 80%);
-        --color-gray-300: oklch(35% 3% 264deg / 80%);
-        --color-gray-400: oklch(47% 3.5% 264deg / 80%);
-        --color-gray-500: oklch(64% 4% 264deg / 80%);
-        --color-gray-600: oklch(82% 4% 264deg / 80%);
-        --color-gray-700: oklch(92% 4.5% 264deg / 80%);
-        --color-gray-800: oklch(93% 3.5% 264deg / 85%);
-        --color-gray-900: oklch(95% 2% 264deg / 90%);
-        --color-gray-950: oklch(94% 1.5% 264deg / 95%);
+    *:focus {
+        -webkit-tap-highlight-color: transparent;
+        outline: none;
+        -ms-touch-action: manipulation;
+        touch-action: manipulation;
     }
 }
+
+    :root {
+        --color-blue: oklch(45% 50% 264deg);
+        --color-red: oklch(50% 55% 31deg);
+
+        --color-gray-50: oklch(98.42% 0.0034 247.86deg);
+        --color-gray-100: oklch(12% 9.5% 264deg / 5%);
+        --color-gray-200: oklch(12% 9% 264deg / 8%);
+        --color-gray-300: oklch(12% 8.5% 264deg / 17%);
+        --color-gray-400: oklch(12% 8% 264deg / 38%);
+        --color-gray-500: oklch(12% 7.5% 264deg / 50%);
+        --color-gray-600: oklch(12% 7% 264deg / 67%);
+        --color-gray-700: oklch(0.458 0.296 264.719 / 0.77);
+        --color-gray-800: oklch(12% 5% 264deg / 85%);
+        --color-gray-900: oklch(12% 5% 264deg / 90%);
+        --color-gray-950: oklch(12% 5% 264deg / 95%);
+
+        @media (prefers-color-scheme: dark) {
+            --color-blue: oklch(69% 50% 264deg);
+            --color-red: oklch(80% 55% 31deg);
+
+            --color-gray-50: oklch(17% 1% 264deg);
+            --color-gray-100: oklch(28% 3% 264deg / 65%);
+            --color-gray-200: oklch(31% 3% 264deg / 80%);
+            --color-gray-300: oklch(35% 3% 264deg / 80%);
+            --color-gray-400: oklch(47% 3.5% 264deg / 80%);
+            --color-gray-500: oklch(64% 4% 264deg / 80%);
+            --color-gray-600: oklch(82% 4% 264deg / 80%);
+            --color-gray-700: oklch(92% 4.5% 264deg / 80%);
+            --color-gray-800: oklch(93% 3.5% 264deg / 85%);
+            --color-gray-900: oklch(95% 2% 264deg / 90%);
+            --color-gray-950: oklch(94% 1.5% 264deg / 95%);
+        }
+    }
